--- a/plugins/check/tasks/obproxy/version/old_version.yaml
+++ b/plugins/check/tasks/obproxy/version/old_version.yaml
@@ -5,5 +5,5 @@ task:
       ssh: "export LD_LIBRARY_PATH=#{remote_home_path}/lib && #{remote_home_path}/bin/obproxy --version 2>&1 | grep \"obproxy (\" | awk '{print $3}'"
       result:
         set_value: obproxy_version
-        verify: '[[ ! "${obproxy_version}" == "4.0"* ]] && [[ ! "${obproxy_version}" == "4.1"* ]] && [[ ! "${obproxy_version}" == "4.2"* ]] && [[ ! "${obproxy_version}" == "4.3.0"* ]] &&  [[ ! "${obproxy_version}" == "3"* ]] && [[ ! "${obproxy_version}" == "4.3.1"* ]]'
+        verify: '[[ ! "${obproxy_version}" == "4.0"* ]] && [[ ! "${obproxy_version}" == "4.1"* ]] && [[ ! "${obproxy_version}" == "4.2"* ]] && [[ ! "${obproxy_version}" == "4.3.0"* ]] &&  [[ ! "${obproxy_version}" == "3"* ]] && [[ ! "${obproxy_version}" == "4.3.1"* ]] && [[ ! "${obproxy_version}" == "4.3.2"* ]]'
         err_msg: '#{obproxy_version} is not recommended, please upgrade to the obproxy'
