--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -31,5 +31,7 @@ gather:
   scenes_base_path: "~/.obdiag/gather/tasks"
   redact_processing_num: 3
   thread_nums: 3
+  gather_log:
+    search_version: 2
 rca:
   result_path: "./obdiag_rca/"
