--- a/.github/workflows/build_base_docker.yml
+++ b/.github/workflows/build_base_docker.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64
-          file: Dockerfile.helper
+          file: dockerfiles/Dockerfile.builder
           push: true
           tags: |
             ${{ vars.DOCKER_PUSH_BASE }}/obdiag-builder:latest
