--- a/plugins/gather/tasks/observer/backup_clean.yaml
+++ b/plugins/gather/tasks/observer/backup_clean.yaml
@@ -1,6 +1,6 @@
 info_en: "[backup clean]"
 info_cn: "[备份清理问题]"
-command: obdiag gather scene run --scene=observer.backup_clean --env "{tenant_id=xxx}"
+command: obdiag gather scene run --scene=observer.backup_clean --env tenant_id=xxx
 task:
   - version: "[2.0.0.0, 3.9.9.9]"
     steps:
