--- a/requirements3.txt
+++ b/requirements3.txt
@@ -1,8 +1,8 @@
 # Core dependencies
 certifi==2024.7.4
-cffi==1.15.0
+cffi>=2.0.0
 charset-normalizer==2.0.12
-cryptography==44.0.1
+cryptography==46.0.3
 idna==3.7
 Jinja2==3.1.6
 MarkupSafe==2.0.1
