--- a/example/operator.yml
+++ b/example/operator.yml
@@ -33,5 +33,4 @@ obcluster:
       ip: xx.xx.xx.xx
     global:
       # if running obdiag in kubernetes, please delete the kubernetes_config_file
-      kubernetes_config_file: "~/.kube/config"
-
+      kubernetes_config_file: "~/.kube/config/config.yaml"
