--- a/.github/workflows/test_command_scene_configHelper.yml
+++ b/.github/workflows/test_command_scene_configHelper.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements3.txt
+        pip install -e .
 
     - name: Run tests
       run:  python -m unittest discover -s test/common -p 'test_*.py'
