--- a/.github/workflows/test_sql_rule.yml
+++ b/.github/workflows/test_sql_rule.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements3.txt
+        pip install -e .
 
     - name: Run tests
       run: python -m unittest discover -s test/analyzer/sql -p 'test_*.py'
