Update installation commands in build workflows to include build dependencies
- Modified pip install commands in both the GitHub Actions workflow and RPM spec file to use the '[build]' extra, ensuring that build dependencies are installed correctly.

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -38,7 +38,7 @@ jobs:
           source /opt/miniconda3/bin/activate obdiag
           /opt/miniconda3/envs/obdiag/bin/python3  -m pip install --upgrade pip setuptools wheel
           source activate obdiag
-          pip3 install .
+          pip3 install .[build]
           make pack
 
       - name: "Upload rpm"
