--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -23,6 +23,7 @@ analyze:
 check:
   ignore_version: false
   work_path: "~/.obdiag/check"
+  max_workers: 12
   report:
     report_path: "./check_report/"
     export_type: table
